HERCULES-9766 - [UPV] Integración SGE - Configuración filtro anualidades para invocación API SGE